1999-02-27  Tom Tromey  <tromey@cygnus.com>

	* Makefile.in, configure: Rebuilt.
	* Makefile.am: Added space before `include'; hack to work around
	weirdness in latest automake.
	* configure.in: Don't create config/gcj-tool; the `.in' file does
	not exist.

Fri Feb 26 23:19:50 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/text/ACIAttribute/Test.java: Added this test.

	* gnu/testlet/java/text/AttributedCharacterIterator/implement.java: 
	Added this test.

	* gnu/testlet/java/text/CharacterIterator/implement.java: Added
	this test.

Tue Feb 23 23:29:18 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/text/SimpleDateFormat/Test.java: Added some test
	cases for lenient date parsing a la Classpath.

1999-02-23  Tom Tromey  <tromey@cygnus.com>

	* choose: Added more verbose output.  If a file pattern is an
	exact match, then it is accepted without examining the tags.

	* gnu/testlet/java/text/StringCharacterIterator/iter.java: New
	file.
	* gnu/testlet/java/text/StringCharacterIterator/constructor.java:
	New file.

1999-02-22  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/TestHarness.java (check): Use Double.toString to
	compare equality of doubles.

1999-02-16  Tom Tromey  <tromey@cygnus.com>

	* choose: Don't use `dirname'.  Sort and uniquify the list of used
	(auxiliary) files.

1999-02-15  Anthony Green  <green@cygnus.com>

	* gnu/testlet/SimpleTestHarness.java: Test for null cname before
	printing it out.

	* gnu/testlet/java/io/DataInputOutput/ReadStream.java: Tag as
	not-a-test.
	* gnu/testlet/java/io/DataInputOutput/ReadReference.java: Tag as
	using ReadStream.
	
	* choose: Add JLS1.0 and JLS1.1 tags.

	* gnu/testlet/java/lang/Math/cos.java,
	gnu/testlet/java/lang/Math/min.java,
	gnu/testlet/java/lang/Math/max.java,
	gnu/testlet/java/lang/Math/rint.java: Fixed comments.

Mon Feb 15 21:04:24 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/io/DataInputOutput/WriteRead.java: Added file.
