@@ -1,3 +1,7 @@
+1999-03-05  Tom Tromey  <tromey@cygnus.com>
+
+	* gnu/testlet/java/text/MessageFormat/format.java: New file.
+
 1999-02-27  Tom Tromey  <tromey@cygnus.com>
 
 	* Makefile.in, configure: Rebuilt.
